# virto-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  button-social.js  button.js  checkbox.js  dialog.js  expanded.rs  icon-button.js  index.html  input-code.js  input.js  justfile  link.js  login.js  logo.js  package-lock.json  package.json  test.html  virto-connect.js
.github/workflows/: components.yml  general_checks.yml  javascript.yml  libwallet-pr.yml  libwallet-publish.yml  rust.yml  scales-pr.yml  sdk-pr.yml  sdk-publish.yml  sube-pr.yml  sube-publish.yml  test.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs  opts.rs
components/: avatar.js  button.js  callout.js  callout.test.js  card.js  components.html  dropdown.js  example.html  example.minimal.html  globalStyles.js  icon-button.js  index.html  input.js  main.js  package-lock.json  package.json  utils.js  virto-connect.js  virto-connect.minimal.js  wdio.conf.js  web-test-runner.config.js
components/virto-notification/: notification.js  notification.test.js
core/: Cargo.toml
core/examples/: hello-world.rs
core/js/: cargo.toml  package.json
core/js/demo/: webauthn.html
core/js/src/: lib.rs  models.rs  utils.rs
core/src/: authenticator.rs  lib.rs  sdk.rs  signer.rs  transport.rs  utils.rs
core/src/backend/matrix/: app_store.rs  mod.rs  registry.rs  types.rs
core/src/base/: app.rs  manager.rs  mem_store.rs  mod.rs  pool.rs  registry.rs  runner.rs  state_manager.rs  store.rs  supervisor.rs  types.rs
core/src/base/app/: app.rs  cqrs.rs  mod.rs  query.rs  types.rs
core/src/base/app/test/: executor.rs  framework.rs  validator.rs
core/src/base/cqrs/: aggregate.rs  command.rs  cqrs.rs  error.rs  event.rs  mod.rs  query.rs
core/src/base/cqrs/test/: executor.rs  framework.rs  mod.rs  validator.rs
core/src/base/matrix/: manager.rs  mod.rs  registry.rs  runner.rs  types.rs
core/src/base/process/: mod.rs  process.rs
core/src/base/supervisor/: OLD.rs  mod.rs  supervisor.rs  utils.rs
core/src/std/wallet/: aggregate.rs  commands.rs  events.rs  mod.rs  services.rs  store.rs  types.rs
core/tests/: mod.rs
core/tests/backend/: backend_test.rs  mod.rs
core/tests/fixtures/: app_mock.rs  mod.rs
core/tests/integration/: app_test.rs  mod.rs  process_test.rs  sdk_test.rs  supervisor_test.rs
examples/: account_generation.rs  balance.rs  persisted_in_keyring.rs  persisted_in_pass.rs  persisted_wallet.rs  query_balance.rs  query_balance_builder.rs  send_tx.rs  send_tx_builder.rs  send_tx_signer.rs  wallet.rs
js/: .npmignore  Cargo.toml
js/src/: lib.cjs  lib.d.ts  lib.rs  wallet.cjs  wallet.d.ts
js/test/: index.js  wallet.test.js
lib/libwallet/: Cargo.toml
lib/libwallet/examples/: account_generation.rs  persisted_in_pass.rs
lib/libwallet/js/: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json
lib/libwallet/js/src/: wallet.rs
lib/libwallet/js/test/: index.js
lib/libwallet/src/: account.rs  lib.rs  util.rs  vault.rs
lib/pjs-rs/: Cargo.toml
lib/pjs-rs/src/: lib.rs
lib/scales/: Cargo.toml
lib/scales/src/: serializer.rs  value.rs
lib/sube/: justfile
lib/sube/src/: builder.rs  (+6 more)
libwallet/: Cargo.toml  justfile
libwallet-core/: Cargo.toml
libwallet-core/src/: lib.rs
libwallet-core/src/vault/: simple.rs
libwallet-js/: Cargo.toml  package-lock.json  package.json
libwallet-js/src/: lib.js  lib.rs  wallet.rs
libwallet-js/test/: package-lock.json  package.json  wallet.test.js
libwallet/examples/: account_generation.rs  persisted_in_keyring.rs  persisted_in_pass.rs
libwallet/js/: Cargo.toml  package.json
libwallet/src/: account.rs  key_pair.rs  lib.rs  substrate_ext.rs  util.rs  vault.rs
pjs-rs/: Cargo.toml  index.html
pjs-rs/src/: lib.rs
scales/: Cargo.toml  README.md  justfile  registry.nu
scales/src/: lib.rs  serializer.rs  value.rs
sdk/js/: README.md  global.d.ts  jest-puppeteer.config.js  jest.config.js  justfile  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.esm.mts  vite.config.mts  vite.config.node.mts  vite.config.web.mts
src/: account.rs  builder.rs  chain.rs  hasher.rs  http.rs  key_pair.rs  lib.rs  main.rs  meta_ext.rs  osvault.rs  rpc.rs  serializer.rs  simple.rs  substrate_ext.rs  util.rs  value.rs  vault.rs  ws.rs
src/vault/: README.md  mod.rs  os.rs  pass.rs  simple.rs
sube/: Cargo.toml  README.md  justfile
sube-cli/: Cargo.toml
sube-cli/src/: main.rs
sube-core/: Cargo.toml  README.md
sube-core/src/: hasher.rs  http.rs  lib.rs  meta_ext.rs  ws.rs
sube-js/: Cargo.toml  tsconfig.json
sube-js/demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
sube-js/demo/src/: counter.ts  main.ts  sube.ts
sube-js/src/: index.ts  lib.rs  util.rs  utils.rs
sube/cli/: Cargo.toml
sube/cli/src/: opts.rs
sube/examples/: pallet_communities.rs  query_at_block.rs  query_balance.rs  query_balance_builder.rs  query_balance_ws.rs  query_identity.rs  query_membership.rs  query_preimage.rs  query_referendum_info.rs  send_tx.rs  send_tx_builder.rs  send_tx_libwallet.rs  send_tx_signer.rs  test.rs
sube/src/: builder.rs  hasher.rs  http.rs  lib.rs  meta_ext.rs  rpc.rs  signer.rs  ws.rs
sube/sube-js/: .gitignore  Cargo.toml  package.json
sube/sube-js/demo/: package-lock.json  package.json  vite.config.js
sube/sube-js/demo/src/: main.ts  sube.ts
sube/sube-js/src/: index.ts  lib.rs
tests/: tests.rs
valor/: Cargo.toml
valor-plugins/: .gitignore  justfile
valor-plugins/hello_world/: Cargo.toml
virto-payments/: virto-payments.html
vos/: .gitignore  Cargo.toml  justfile
vos-apps/: Cargo.toml  justfile
vos-apps/hello_world/: Cargo.toml
vos-connect/: Cargo.toml  index.html  justfile
vos-connect/src/: sh.js  vos.js
vos-pass/: Cargo.toml  index.html  justfile
vos-pass/src/: io.rs  js_worker.rs  lib.rs  pass.js
vos-programs/memberships/: Cargo.toml  README.md
vos/js/: example.html  form-util.js  matrix.js  sh.js  vos-connect.js
vos/src/: io.rs  js_worker.rs  lib.rs  main.rs
(+102 files in other folders)
