[package]
name = "libwallet"
version = "0.3.0"
authors = ["Daniel Olano <me@olanod.com>"]
edition = "2018"
autoexamples = false

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
mnemonic = { package = "bip0039", version = "0.10.1", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true}
#serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
schnorrkel = { version = "0.10.2", default-features = false, optional = true }
rand_core = { version = "0.6.3", optional = true }
# soft derivation in no_std
rand_chacha = { version = "0.3.1", default-features = false, optional = true } 
# os vault
keyring = { version = "1.1.2", optional = true }
prs-lib = { version = "0.2.1", optional = true }
dirs = { version = "4.0", optional = true }
pbkdf2 = { version = "0.11.0", default-features = false, optional = true }
sha2 = { version = "0.10.2", default-features = false, optional = true }
hmac = { version = "0.12.1", default-features = false, optional = true }

[[example]]
name = "account_generation"
path = "examples/account_generation.rs"

# needs feature vault_os
# [[example]]
# name = "persisted_in_keyring"
# path = "examples/persisted_in_keyring.rs"

# needs feature vault_pass dirs
# [[example]]
# name = "persisted_in_pass"
# path = "examples/persisted_in_pass.rs"

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
async-std = { version = "1.10.0", features = ["attributes"] }

[features]
default = ["std", "substrate", "vault_simple", "mnemonic", "rand"]
std = [
	"rand_core/getrandom",
	"schnorrkel/getrandom",
]
rand = ["rand_core"]
substrate = ["sr25519"]
sr25519 = ["schnorrkel/u64_backend"]
util_pin = ["pbkdf2", "hmac", "sha2"]
vault_os = ["keyring", "util_pin"]
vault_pass = ["prs-lib", "dirs"]
vault_simple = []
