[package]
name = "sube"
description = "SUBmit Extrinsics to a Substrate node"
license = "Apache-2.0"
version = "1.0.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2021"
repository = "https://github.com/valibre-org/sube"

[dependencies]
log = "0.4.17"
async-trait = "0.1.53"
blake2 = { version = "0.10.5", default-features = false }
codec = { version = "3.1.2", package = "parity-scale-codec", default-features = false }
frame-metadata = { version = "15.0.0", git = "https://github.com/paritytech/frame-metadata.git", default-features = false, features = ["serde_full", "decode"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
once_cell = { version = "1.10.0", default-features = false }
twox-hash = { version = "1.6.2", default-features = false }
serde = { version = "1.0.137", default-features = false }

scale-info = { version = "2.1.1", default-features = false, optional = true }
jsonrpc = { version = "0.12.1", default-features = false, optional = true }
scales = { path = "../scales", package = "scale-serialization", default-features = false, features = ["codec"] }

# http backend
surf = { version = "2.3.2", default_features = false, optional = true }

# ws backend
async-tungstenite = { version = "0.17.2", features = ["async-std-runtime"], optional = true }
futures-channel = { version = "0.3.21", default-features = false, features = ["alloc"], optional = true }
futures-util = { version = "0.3.21", default-features = false, features = ["sink"], optional = true }
async-mutex = { version = "1.4.0", optional = true }
async-tls = { version = "0.11.0", default-features = false, optional = true }

# bin target
async-std = { version = "1.11.0", default_features = false, optional = true }
serde_json = { version = "1.0.80", default-features = false, optional = true }
url = { version = "2.2.2", optional = true }

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
hex-literal = "0.3.4"

[features]
# default = ["json", "std"]
#default = ["v14", "ws", "decode", "json", "std"]
# decode = ["v14", "serde", "scales/codec"]
# encode = ["v14", ]
http = ["jsonrpc", "surf/h1-client-rustls"]
http-web = ["jsonrpc", "surf/wasm-client"]
json = ["v14", "scales/json"]
std = []
v12 = ["frame-metadata/v12"]
v13 = ["frame-metadata/v13"]
v14 = ["frame-metadata/v14", "scale-info"]
ws = ["async-std", "async-tungstenite", "async-mutex", "futures-util", "futures-channel", "jsonrpc"]
wss = ["ws", "async-tls", "async-tungstenite/async-tls"]


[package.metadata.docs.rs]
features = ["http"]

[workspace]
members = [
	"sube-js",
	"cli"
]
