[package]
name = "virto-sdk"
description = "virtoSDK"
license = "Apache-2.0"
version = "1.0.0"
authors = ["David Barinas <david.barinas.dev@gmail.com>"]
edition = "2021"
repository = "https://github.com/virto-network/virto-dk/"


[dependencies]
async-trait = "0.1.53"
async-std = "1.12.0"
serde_json = { version = "1.0.80" }
serde = { version = "1.0.137", default-features = false }
cqrs-es = { path = "../../cqrs", default-features = false }
futures = "0.3.30"


[dependencies.sube]
path = "../sube"
default-features = false

[dependencies.libwallet]
path = "../libwallet"
features = ["js"]



[features]
default = ['sube/default', "async-std/attributes"]
js = ['sube/js']


[workspace]
members = [
  "js"
]



[patch.crates-io]
cookie = { git = "https://github.com/S0c5/cookie-rs.git" }
