[package]
authors = ["Daniel Olano <me@olanod.com>"]
autoexamples = true
edition = "2018"
name = "libwallet"
version = "0.3.0"

[dependencies]
arrayvec = {version = "0.7.2", default-features = false}
dirs = {version = "4.0", optional = true}
hmac = {version = "0.12.1", default-features = false, optional = true}
keyring = {version = "1.1.2", optional = true}# os vault
mnemonic = {package = "bip0039", version = "0.10.1", default-features = false, optional = true}
pbkdf2 = {version = "0.11.0", default-features = false, optional = true}
prs-lib = {version = "0.2.1", optional = true}
rand_chacha = {version = "0.3.1", default-features = false, optional = true}
rand_core = {version = "0.6.3", optional = true}
schnorrkel = {version = "0.10.2", default-features = false, optional = true}# soft derivation in no_std
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}
sha2 = {version = "0.10.2", default-features = false, optional = true}

[dev-dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}

[features]
default = ["std", "substrate", "vault_simple", "mnemonic", "rand"]
rand = ["rand_core"]
sr25519 = ["schnorrkel/u64_backend", "schnorrkel/getrandom"]
std = [
  "rand_core/getrandom",
]
substrate = ["sr25519"]
util_pin = ["pbkdf2", "hmac", "sha2"]
vault_os = ["keyring"]
vault_pass = ["prs-lib", "dirs"]
vault_simple = []
