[package]
name = "pjs"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.91", default-features = false }
wasm-bindgen-futures = "0.4.42"
log = "0.4.19"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
]

[features]
default = ["js"]
js = []

[lib]
crate-type = ["cdylib", "lib"]
