[package]
name = "sube-js"
version = "0.1.0"
authors = ["david barinas <hi@virto.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["alloc"]
alloc = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
sube = { path = "../" }

[dev-dependencies]
console_error_panic_hook = { version = "0.1.6" }
wasm-bindgen-test = "0.3.13"

# [profile.release]
# opt-level = "s"
