[package]
name = "sube-js"
version = "0.1.0"
authors = ["david barinas <hi@virto.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["alloc"]
alloc = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
sube = { path = "../", features=["js", "v14"] }
wasm-bindgen-futures = "0.4.33"
serde = "1.0.152"
serde_json = "1.0.91"
serde-wasm-bindgen = "0.4.5"
js-sys = "0.3.60"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
parity-scale-codec = "3.2.1"
# sp-core = "10.0.0"

[dev-dependencies]
console_error_panic_hook = { version = "0.1.6" }
wasm-bindgen-test = "0.3.13"

# [profile.release]
# opt-level = "s"
