[package]
name = "sube"
description = "SUBmit Extrinsics to a Substrate node"
license = "Apache-2.0"
version = "1.0.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2021"
repository = "https://github.com/valibre-org/virto-dk/sube"

[dependencies]
async-once-cell = "0.4.4"
blake2 = { version = "0.10.5", default-features = false }
codec = { version = "3.1.2", package = "parity-scale-codec", default-features = false }
frame-metadata = { version = "16.0.0", default-features = false, features = ["serde_full", "decode"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
jsonrpc = { version = "0.12.1", default-features = false, optional = true }
log = "0.4.17"
scale-info = { version = "2.1.1", default-features = false, optional = true }
scales = { path="../scales", package = "scale-serialization", default-features = false, features = ["codec", "experimental-serializer", "json", "std"] }
serde = { version = "1.0.137", default-features = false }
# TODO: shouldn't be a base dependeny. remove after: https://github.com/virto-network/virto-sdk/issues/53
serde_json = { version = "1.0.80", default-features = false, features = ["alloc", "arbitrary_precision"] }
twox-hash = { version = "1.6.2", default-features = false }
url = "2.5.0"

# http backend
surf = { version = "2.3.2", default-features = false, optional = true }

# ws backend
futures-channel = { version = "0.3.21", default-features = false, features = ["alloc"], optional = true }
futures-util = { version = "0.3.21", default-features = false, features = ["sink"], optional = true }
async-mutex = { version = "1.4.0", optional = true }
async-tls = { version = "0.11.0", default-features = false, optional = true }

# bin target
async-std = { version = "1.11.0", default-features = false, optional = true }
paste = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2.91", optional = true }
once_cell = { version = "1.17.1", optional = true }
heapless = { version = "0.7.16", optional = true }
anyhow = { version = "1.0.40", optional = true }
rand_core = {version = "0.6.3", optional = true }
ewebsock = { git = "https://github.com/S0c5/ewebsock.git", optional = true, branch = "enhacement/aviod-blocking-operations-with-mpsc-futures" }
env_logger = "0.11.3"

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
hex-literal = "0.3.4"
libwallet = { path = "../libwallet", default-features=false, features=["substrate", "mnemonic", "sr25519",  "util_pin", "rand", "std" ] }
rand_core = "0.6.3"

[features]
default = ["v14"]
test = ["std", "wss", "http", "json", "v14", "dep:async-std", "dep:rand_core"]
http = ["dep:jsonrpc", "surf/h1-client-rustls"]
http-web = ["dep:jsonrpc", "dep:wasm-bindgen", "surf/wasm-client"]
json = ["scales/json"]
std = []

v14 = ["dep:scale-info", "frame-metadata/current"]
ws = ["dep:async-mutex", "dep:async-std", "dep:ewebsock", "dep:futures-channel", "dep:futures-util", "dep:jsonrpc", "async-std/unstable"]
wss = ["dep:async-tls", "ws", "ewebsock/tls", "async-std/unstable"]
examples = ["dep:rand_core"]
js = ["http-web", "json", "v14", 'async-std/unstable', "ws", "dep:rand_core"]

[package.metadata.docs.rs]
features = ["http"]

[workspace]
members = [
	"sube-js",
	"cli"
]

[patch.crates-io]
cookie = { git = "https://github.com/S0c5/cookie-rs.git" }
