[package]
name = "vos-pass"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { version = "2.3.1", default-features = false }
futures-core = { version = "0.3.30", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
wasm-bindgen = { version = "0.2.93", default-features = false }
wasm-bindgen-futures = "0.4.42"

[dependencies.matrix-sdk]
version = "0.7.1"
default-features = false
features = [
  "js",
  "native-tls",
  "e2e-encryption",
  "indexeddb",
]

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  # "Worker",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
]

[lib]
crate-type = ["cdylib"]
