[package]
name = "vos"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { version = "2.3.1", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
log = "0.4.22"
serde = { version = "1.0.209", default-features = false }
# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
matrix-sdk = { version = "0.7.1", default-features = false, features = ["native-tls", "e2e-encryption", "sqlite"] }

# JS
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.93", default-features = false }
wasm-bindgen-futures = { version = "0.4.42", default-features = false }
wasm-logger = { version = "0.2.0", default-features = false }
serde-wasm-bindgen = "0.6.5"
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  # "Worker",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
]
[target.'cfg(target_arch = "wasm32")'.dependencies.matrix-sdk]
version = "0.7.1"
default-features = false
features = [
  "js",
  "native-tls",
  "e2e-encryption",
  "indexeddb",
]

[lib]
crate-type = ["cdylib"]
