[package]
name = "sube-js"
version = "0.1.0"
authors = ["david barinas <hi@virto.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.91"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.41"
serde = "1.0.152"
serde_json = "1.0.91"
serde-wasm-bindgen = "0.6.3"
js-sys = "0.3.68"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
parity-scale-codec = "3.2.1"
console_error_panic_hook = "0.1.7"
# sp-core = "10.0.0"
console_log = "1.0.0"
log = "0.4.21"

[dev-dependencies]
console_error_panic_hook = { version = "0.1.6" }
wasm-bindgen-test = "0.3.13"



[dependencies.sube]
path = ".."
default-features=false
features = [
  "js"
]

[features]
default = ["alloc"]
alloc = ["wee_alloc"]
