[package]
authors = ["Pablo Dorado <hola@pablodorado.com>"]
autoexamples = true
edition = "2021"
name = "libwallet-js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
libwallet = { path = "..", default-features = false }
hex = { version = "0.4.3", optional = true }
js-sys = "0.3.61"
rand_core = { version = "0.6.3", features = ["getrandom"] }
getrandom = { version = "0.2.1", features = ["js"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# [target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
# features = ["js"]

[features]
default = ["wallet", "js", "hex", "util_pin"]
hex = ["dep:hex"]
js = ["std"]
std = []
util_pin = ["libwallet/util_pin"]
vault_simple = ["libwallet/mnemonic", "libwallet/rand"]
wallet = ["libwallet/serde", "libwallet/sr25519", "libwallet/substrate"]
